# Aguzarov_R_BigInt

./: BigInt.cpp  BigInt.h  CMakeLists.txt  README.md  divide_tests.cpp  main.cpp  mult_tests.cpp  plus_tests.cpp  sub_tests.cpp
BigInt/: BigInt.cpp  BigInt.h  CMakeLists.txt
all_tests/: comp.cpp  divide_tests.cpp  mult_tests.cpp  plus_tests.cpp  sub_tests.cpp
